--- a/LeoVulkan/Lec05_TextureMapping/Lec05_TextureMapping.vcxproj
+++ b/LeoVulkan/Lec05_TextureMapping/Lec05_TextureMapping.vcxproj
@@ -64,6 +64,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
