--- a/LeoVulkan/Lec03_VertexBuffers/Lec03_VertexBuffers.vcxproj
+++ b/LeoVulkan/Lec03_VertexBuffers/Lec03_VertexBuffers.vcxproj
@@ -75,7 +75,7 @@
     %VULKAN_SDK%\Bin\glslc.exe "$(SolutionDir)Assets\Shaders\GLSL\%%~nxf" -o "$(SolutionDir)Assets\Shaders\SPIRV\%%~nxf.spv" 
 )
 xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
-      <Message>Compile Shader</Message>
+      <Message>Compiling Shaders!</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -101,7 +101,7 @@ xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
     %VULKAN_SDK%\Bin\glslc.exe "$(SolutionDir)Assets\Shaders\GLSL\%%~nxf" -o "$(SolutionDir)Assets\Shaders\SPIRV\%%~nxf.spv" 
 )
 xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
-      <Message>Compile Shader</Message>
+      <Message>Compiling Shaders!</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
