--- a/LeoVulkan/Lec04_UniformBuffers/Lec04_UniformBuffers.vcxproj
+++ b/LeoVulkan/Lec04_UniformBuffers/Lec04_UniformBuffers.vcxproj
@@ -77,7 +77,7 @@
 xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Message>Compiling Shader</Message>
+      <Message>Compiling Shaders!</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -105,7 +105,7 @@ xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
 xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Message>Compiling Shader</Message>
+      <Message>Compiling Shaders!</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
