--- a/LeoVulkan/Lec06_DepthBuffering/Lec06_DepthBuffering.vcxproj
+++ b/LeoVulkan/Lec06_DepthBuffering/Lec06_DepthBuffering.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -97,6 +98,15 @@ xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>for %%f in ("$(SolutionDir)Assets\Shaders\GLSL\*.*") do (
+    %VULKAN_SDK%\Bin\glslc.exe "$(SolutionDir)Assets\Shaders\GLSL\%%~nxf" -o "$(SolutionDir)Assets\Shaders\SPIRV\%%~nxf.spv" 
+)
+xcopy "$(SolutionDir)Assets\*.*"  "$(TargetDir)\Assets" /y /i /e</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Compiling Shaders!</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Lec06_DepthBuffering.cpp" />
