[M] 添加基础的初始化代码

--- a/LeoVulkanEngine/Source/CMakeLists.txt
+++ b/LeoVulkanEngine/Source/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(Engine)
 
 add_executable(LeoVKEngine
     main.cpp
+    Engine/VKPCH.h
     Engine/VKEngine.cpp
     Engine/VKEngine.h
     Engine/VKTypes.h
