--- a/LeoVulkanEngine/External/CMakeLists.txt
+++ b/LeoVulkanEngine/External/CMakeLists.txt
@@ -3,10 +3,10 @@ find_package(Vulkan REQUIRED)
 add_library(vkbootstrap STATIC)
 add_library(glm INTERFACE)
 add_library(vma INTERFACE)
-
 add_library(stb_image INTERFACE)
-
 add_library(tinyobjloader STATIC)
+
+add_subdirectory(fastgltf)
 
 target_sources(vkbootstrap PRIVATE 
     vkbootstrap/VkBootstrap.h
@@ -27,22 +27,14 @@ target_sources(tinyobjloader PRIVATE
 
 target_include_directories(tinyobjloader PUBLIC tinyobjloader)
 
-
 add_library(sdl2 INTERFACE)
 set(sdl2_DIR "./SDL2")
 
-if (WIN32)
 target_include_directories(sdl2 INTERFACE ${sdl2_DIR}/include ${sdl2_image_DIR}/include)
 target_link_directories(sdl2 INTERFACE ${sdl2_DIR}/lib/x64 ${sdl2_image_DIR}/lib/x64)
-elseif (UNIX)
-target_include_directories(sdl2 INTERFACE ${sdl2_DIR}/include/SDL2 ${sdl2_image_DIR}/include/SDL2)
-target_link_directories(sdl2 INTERFACE ${sdl2_DIR}/lib ${sdl2_image_DIR}/lib)
-endif()
-
 target_link_libraries(sdl2 INTERFACE SDL2 SDL2main)
 
 add_library(imgui STATIC)
-
 target_include_directories(imgui PUBLIC imgui)
 
 target_sources(imgui PRIVATE 
@@ -58,5 +50,4 @@ target_sources(imgui PRIVATE
     )
 
 target_link_libraries(imgui PUBLIC Vulkan::Vulkan sdl2)
-
 target_include_directories(stb_image INTERFACE stb_image)
