[M] Update Vulkan Guide

--- a/LeoVulkanGuide/CMakeLists.txt
+++ b/LeoVulkanGuide/CMakeLists.txt
@@ -6,13 +6,17 @@ set(NAME LeoRenderer)
 project(${NAME})
 
 include_directories(External)
+include_directories(External/FastGLTF)
 include_directories(External/GLM)
 include_directories(External/ImGui)
-include_directories(External/TinyGLTF)
-include_directories(External/FastGLTF)
 include_directories(External/KTX/include)
 include_directories(External/KTX/other_include)
+include_directories(External/LZ4)
+include_directories(External/STB)
+include_directories(External/TinyGLTF)
 include_directories(External/Vulkan)
+include_directories(External/TinyObjLoader)
+
 include_directories(Common/Utility)
 include_directories(Common/VulkanObject)
 
